[gd_scene load_steps=4 format=2]

[ext_resource path="res://WorldObjects/Destructables/Barrel/Still_barrel/Barrel.gd" type="Script" id=1]
[ext_resource path="res://Assets/WorldObjects/WorldObjects.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Barrel" type="KinematicBody2D"]
collision_layer = 18
collision_mask = 18
script = ExtResource( 1 )

[node name="GroundRay1" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 128

[node name="GroundRay2" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 128

[node name="GroundRay3" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 128

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HazardArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
shape = SubResource( 1 )
